<resources>
    <string name="app_name">Виртуальная лаборатория</string>
    <string name="perform">Выполнение лабораторных работ</string>
    <string name="sensors">Датчики</string>
    <string name="about">О программе</string>
    <string name="share">Поделиться с друзьями</string>
    <string name="max_range">Макс. значение</string>
    <string name="name">Имя</string>
    <string name="no_Accel">В вашем устройстве нет акселерометра</string>
    <string name="resolution">Шаг измерения</string>
    <string name="type">Тип</string>
    <string name="vendor">Создатель</string>
    <string name="version">Версия</string>
    <string name="laboratory_work">Лабораторная работа</string>
    <string name="accuracy">Точность</string>
    <string name="accelerometer">Акселерометр</string>
    <string name="gyroscope">Гироскоп</string>
    <string name="coordinate">Координата</string>
    <string name="btn_no_action">Эта кнопка не имеет действия сейчас</string>
    <string name="AboutProgram">"Приложение «Мобильная лаборатория» позволит современному школьнику легко и с интересом освоить основные законы физики и выполнить классические лабораторные работы с применением своего смартфона в качестве измерительного устройства. Известно, что современный смартфон – это не только средство связи, но и мощная измерительная установка, позволяющая с помощью собственных датчиков измерять скорость и ускорение, угол наклона устройства, величину магнитного поля, уровень освещенности и многие другие физические величины. Приложение позволит освоить принцип работы датчиков, научит правильно использовать их для проведения измерений. Каждая лабораторная работа посвящена изучению определенного физического эффекта или явления и включает в себя краткий теоретический материал по теме, описание порядка проведения измерений и оформления результатов, а также набор контрольных вопросов. Теперь у Вас в руках настоящая лаборатория, с которой урок физики станет намного интересней и увлекательней! "</string>
    <string name="light_sensor">Датчик освещения</string>
    <string name="magnetic_field_sensor">Датчик магнитных полей</string>
    <string name="temperature_sensor">Датчик температуры</string>
    <string name="humidity_sensor">Измеритель относительной влажности</string>
    <string name="barometer">Барометр</string>
    <string name="labworkName">Лабораторная\\nработа\\n№</string>
    <string name="controlQuestions">Контрольные вопросы</string>
    <string name="description">Описание лабораторной работы</string>
    <string name="performLabWork">Выполнить лабораторную работу</string>
    <string name="theoreticalMaterial">Теоретический матерал</string>
    <string name="information">Разработчики программного обеспечения не несут ответственности за сохранность устройств во время выполнения лаборатоных работ. Нажимая кнопку \"Продолжить\", вы подтверждаете, что ознакомились с данной информацией и не имеете никаких претензий к разработчику программного продукта</string>
    <string name="attention">Внимание!</string>
    <string name="cancel">Отмена</string>
    <string name="continuebtn">Продолжить</string>
    <string name="averageAcceleration">Среднее ускорение:</string>
    <string name="cos">Косинус:</string>
    <string name="sin">Синус:</string>
    <string name="tiltAngle">Угол наклона:</string>
    <string name="startMeasurement">Начать измерение</string>
    <string name="lastExperiment">Последний эксперимент</string>
    <string name="getAllData">Получить все данные</string>
    <string name="instruction"></string>
    <string name="instruction1">Положите устройство на наклонную плоскость и нажмите кнопку "Начать измерение"</string>
    <string name="instruction3">Отпустите устройство</string>
    <string name="instruction2">Подождите пока ускорение стабилизируется</string>
    <string name="friction">Коэффициент трения:</string>
    <string name="frictionNotMeasured">Коэффициент трения еще не измерялся</string>
    <string name="cancelMeasurement">Остановить измерение</string>
    <string name="report">Сообщить об ошибке</string>

</resources>