<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alex.virtuallaboratory.MainActivity">

    <Button
        android:text="@string/perform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_perform"
        style="@style/ButtonTheme"
        android:layout_weight="1"
        android:textAllCaps="false" />

    <Button
        android:text="@string/sensors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_sensors"
        style="@style/ButtonTheme"
        android:layout_weight="1"
        android:textAllCaps="false" />

    <Button
        android:text="@string/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_about"
        style="@style/ButtonTheme"
        android:layout_weight="1"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_share"
        style="@style/ButtonTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:text="@string/share"
        android:textAllCaps="false"
        />

</LinearLayout>