<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alex.virtuallaboratory.MainActivity">

    <Button
        android:text="@string/performLabWork"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_performLab"
        style="@style/ButtonTheme"
        android:layout_weight="1"
        android:textAllCaps="false" />

    <Button
        android:text="@string/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_description"
        style="@style/ButtonTheme"
        android:layout_weight="1"
        android:textAllCaps="false" />

    <Button
        android:text="@string/theoreticalMaterial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_theory"
        style="@style/ButtonTheme"
        android:layout_weight="1"
        android:textAllCaps="false" />

    <Button
        android:text="@string/controlQuestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_controlQuestions"
        style="@style/ButtonTheme"
        android:layout_weight="1"
        android:textAllCaps="false" />


</LinearLayout>
